# add-diesel-to-a-rusty-rocket

./: Cargo.toml  README.md  Rocket.toml  db.db
src/: beer.rs  db.rs  main.rs  schema.rs
