[package]
name = "rocket-diesel-simple-example"
version = "0.1.0"
authors = ["Fabio Crestani <crestani.fabio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rocket = "0.4.7"
rocket = "0.4.8"
rocket_codegen = "0.4"
rocket_contrib = "0.4"
#serde = "1.0"
#serde_json = "1.0"
serde_derive = "1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
diesel = { version = "1.0.0", features = ["sqlite", "r2d2"] }
libsqlite3-sys = { version = "0.17.3", features = ["bundled"] }
csv = "1.1"
